--- a/src/app/design/templates/general-overview/general-overview.component.html
+++ b/src/app/design/templates/general-overview/general-overview.component.html
@@ -1,73 +1,75 @@
-<article class="container overview">
-    <!-- Heading -->
-    <div *ngIf="overviewTypeName">
-      <h1 class="overview__page-heading">
-        <ng-container [ngSwitch]="overviewType">
-          <ng-container *ngSwitchCase="'CHARACTER'">
-            Characters
+<app-page-container>
+  <article class="container overview">
+      <!-- Heading -->
+      <div *ngIf="overviewTypeName">
+        <h1 class="overview__page-heading">
+          <ng-container [ngSwitch]="overviewType">
+            <ng-container *ngSwitchCase="'CHARACTER'">
+              Characters
+            </ng-container>
+            <ng-container *ngSwitchCase="'LOCATION'">
+              Locations
+            </ng-container>
+            <ng-container *ngSwitchCase="'ITEM'">
+              Items
+            </ng-container>
+            <ng-container *ngSwitchCase="'ORGANIZATION'">
+              Organizations
+            </ng-container>
+            <ng-container *ngSwitchCase="'CREATURE'">
+              Creatures
+            </ng-container>
+            <ng-container *ngSwitchCase="'DIARYENTRY'">
+              Diaryentries
+            </ng-container>
+            <ng-container *ngSwitchDefault>
+              Entries
+            </ng-container>        
           </ng-container>
-          <ng-container *ngSwitchCase="'LOCATION'">
-            Locations
-          </ng-container>
-          <ng-container *ngSwitchCase="'ITEM'">
-            Items
-          </ng-container>
-          <ng-container *ngSwitchCase="'ORGANIZATION'">
-            Organizations
-          </ng-container>
-          <ng-container *ngSwitchCase="'CREATURE'">
-            Creatures
-          </ng-container>
-          <ng-container *ngSwitchCase="'DIARYENTRY'">
-            Diaryentries
-          </ng-container>
-          <ng-container *ngSwitchDefault>
-            Entries
-          </ng-container>        
-        </ng-container>
-      </h1>
-    </div>
-    
-    <div class="overview__subheading">
-      <ng-container [ngSwitch]="overviewType">
-          <ng-container *ngSwitchCase="'CHARACTER'">
-            <ng-container [ngTemplateOutlet]="(playerCharacters?.length ?? 0 > 0) ? characterHeading : defaultHeading"></ng-container>
-          </ng-container>
-          <ng-container *ngSwitchDefault [ngTemplateOutlet]="defaultHeading"></ng-container>        
-      </ng-container>
-    </div>
-
-    <!-- Adding Item button -->
-    <ng-container *ngIf="canCreate">
-      <div class="overview__create">
-        <a [routerLink]="'create'">
-          <app-button
-            [icon]="'plus'"
-            [type]="'PRIMARY'"
-            [text]="'Add ' + (overviewTypeName | titlecase)"
-          ></app-button>
-        </a>
+        </h1>
       </div>
-    </ng-container>
-    
-    <div class="row">
-      <ng-container [ngSwitch]="overviewType"> 
-          <ng-container *ngSwitchCase="'CHARACTER'" [ngTemplateOutlet]="characterBody"></ng-container>
-          <ng-container *ngSwitchCase="'DIARYENTRY'" [ngTemplateOutlet]="diaryentryBody"></ng-container>
-          <ng-container *ngSwitchDefault [ngTemplateOutlet]="defaultBody"></ng-container>        
+      
+      <div class="overview__subheading">
+        <ng-container [ngSwitch]="overviewType">
+            <ng-container *ngSwitchCase="'CHARACTER'">
+              <ng-container [ngTemplateOutlet]="(playerCharacters?.length ?? 0 > 0) ? characterHeading : defaultHeading"></ng-container>
+            </ng-container>
+            <ng-container *ngSwitchDefault [ngTemplateOutlet]="defaultHeading"></ng-container>        
+        </ng-container>
+      </div>
+  
+      <!-- Adding Item button -->
+      <ng-container *ngIf="canCreate">
+        <div class="overview__create">
+          <a [routerLink]="'create'">
+            <app-button
+              [icon]="'plus'"
+              [type]="'PRIMARY'"
+              [text]="'Add ' + (overviewTypeName | titlecase)"
+            ></app-button>
+          </a>
+        </div>
       </ng-container>
-    </div>
-
-<!-- Footer -->
-<div class="row">
-  <a [routerLink]="homeUrl" class="overview__home">
-    <app-button
-      [type]="'SECONDARY'"
-      [text]="'Back To Frontpage'"
-    ></app-button>
-  </a>
-</div>
-</article>
+      
+      <div class="row">
+        <ng-container [ngSwitch]="overviewType"> 
+            <ng-container *ngSwitchCase="'CHARACTER'" [ngTemplateOutlet]="characterBody"></ng-container>
+            <ng-container *ngSwitchCase="'DIARYENTRY'" [ngTemplateOutlet]="diaryentryBody"></ng-container>
+            <ng-container *ngSwitchDefault [ngTemplateOutlet]="defaultBody"></ng-container>        
+        </ng-container>
+      </div>
+  
+  <!-- Footer -->
+  <div class="row">
+    <a [routerLink]="homeUrl" class="overview__home">
+      <app-button
+        [type]="'SECONDARY'"
+        [text]="'Back To Frontpage'"
+      ></app-button>
+    </a>
+  </div>
+  </article>
+</app-page-container>
 
 
 <ng-template #defaultHeading>
