--- a/src/app/design/templates/create-update/create-update.component.html
+++ b/src/app/design/templates/create-update/create-update.component.html
@@ -1,36 +1,38 @@
-<article class="container create-update">
-  <h1 class="create-update__heading heading">
-    
-    <span class="heading__text">
-      {{ heading }}
-    </span>  
-    <!-- Heading -->
-    <div class="heading__edit-cancel">
-      <app-button
-        (click)="onCancel()"
-        [icon]="'times'"
-        [type]="'SECONDARY'"
-      ></app-button>
-    </div>
-  </h1>
-
-  <!-- Form -->
-  <ng-container [ngSwitch]="state">
-    <ng-container 
-      *ngSwitchCase="'CREATE'"
-      [ngTemplateOutlet]="createUpdateForm"
-    ></ng-container>
-    <ng-container 
-      *ngSwitchCase="'UPDATE'"
-      [ngTemplateOutlet]="createUpdateForm"
-    ></ng-container>
-    <ng-container 
-      *ngSwitchCase="'OUTDATED_UPDATE'"
-      [ngTemplateOutlet]="outdatedUpdateForm"
-    ></ng-container>
-  </ng-container>
+<app-page-container>
+  <article class="container create-update">
+    <h1 class="create-update__heading heading">
+      
+      <span class="heading__text">
+        {{ heading }}
+      </span>  
+      <!-- Heading -->
+      <div class="heading__edit-cancel">
+        <app-button
+          (click)="onCancel()"
+          [icon]="'times'"
+          [type]="'SECONDARY'"
+        ></app-button>
+      </div>
+    </h1>
   
-</article>
+    <!-- Form -->
+    <ng-container [ngSwitch]="state">
+      <ng-container 
+        *ngSwitchCase="'CREATE'"
+        [ngTemplateOutlet]="createUpdateForm"
+      ></ng-container>
+      <ng-container 
+        *ngSwitchCase="'UPDATE'"
+        [ngTemplateOutlet]="createUpdateForm"
+      ></ng-container>
+      <ng-container 
+        *ngSwitchCase="'OUTDATED_UPDATE'"
+        [ngTemplateOutlet]="outdatedUpdateForm"
+      ></ng-container>
+    </ng-container>
+    
+  </article>
+</app-page-container>
 
 <ng-template #createUpdateForm>
   <app-form
