--- a/src/app/design/templates/diaryentry/diaryentry.component.html
+++ b/src/app/design/templates/diaryentry/diaryentry.component.html
@@ -1,71 +1,73 @@
-<article class="container diarentry">
-  <ng-container *ngIf="canUpdate">
-    <div class="diaryentry__edit-row edit-row">
-      <div class="edit-row__edit-container edit-container">
-        <a class="edit-container__button" [routerLink]="updateUrl">
+<app-page-container>
+  <article class="container diarentry">
+    <ng-container *ngIf="canUpdate">
+      <div class="diaryentry__edit-row edit-row">
+        <div class="edit-row__edit-container edit-container">
+          <a class="edit-container__button" [routerLink]="updateUrl">
+            <app-button
+              [icon]="'pencil'"
+              [type]="'SECONDARY'"
+            ></app-button>
+          </a>
           <app-button
-            [icon]="'pencil'"
+            class="edit-container__button"
             [type]="'SECONDARY'"
+            [icon]="state === 'DISPLAY' ? 'pencil' : 'times'"
+            [text]="state === 'DISPLAY' ? 'Edit Encounters' : 'Read Diaryentry'"
+            (click)="toggleState()"
           ></app-button>
-        </a>
-        <app-button
-          class="edit-container__button"
-          [type]="'SECONDARY'"
-          [icon]="state === 'DISPLAY' ? 'pencil' : 'times'"
-          [text]="state === 'DISPLAY' ? 'Edit Encounters' : 'Read Diaryentry'"
-          (click)="toggleState()"
-        ></app-button>
+        </div>
       </div>
-    </div>
-  </ng-container>
-
-    <!-- Heading -->
-    <div class="row">
-        <h1 class="col-12 diaryentry__heading">
-            Diary Entry # {{ diaryentry.session_details?.session_number }} <br>
-            {{ diaryentry.title }}
-        </h1>
-        <h6 class="col-12 diaryentry__subheading"> 
-          Written by: {{ diaryentry.author_details?.name }} <br>
-          on {{diaryentry.session_details?.session_date | date: "longDate"}}
-        </h6>
-    </div>
-
-    <!-- Next/Prior Diaryentry Buttons -->
-    <ng-container *ngTemplateOutlet="navButtons"></ng-container>
-
-    <!-- DiaryEntry Text In Encounters -->
-    <app-diaryentry-encounters
-      [diaryEntryPk]="diaryentry.pk ?? -1"
-      [encounters]="diaryentry.encounters"
-      [campaignCharacters]="campaignCharacters"
-      [encounterServerModel]="encounterServerModel"
-      [canUpdate]="canUpdate"
-      [canDelete]="canDelete"
-      [canCreate]="canCreate"
-      [state]="state === 'DISPLAY' ? 'READ' : 'EDIT'"
-      (connectionDelete)="encounterConnectionDelete.emit($event)"
-      (connectionCreate)="encounterConnectionCreate.emit($event)"
-      (encounterDelete)="encounterDelete.emit($event)"
-      (encounterUpdate)="encounterUpdate.emit($event)"
-      (encounterCreate)="encounterCreate.emit($event)"
-      (encounterSwap)="encounterSwap.emit($event)"
-      (encounterCutInsert)="encounterCutInsert.emit($event)"
-    ></app-diaryentry-encounters>
-
-    <!-- Next/Prior Diaryentry Buttons -->
-    <ng-container *ngTemplateOutlet="navButtons"></ng-container>
-
-    <!-- Footer (Move to other Article + Delete Article) -->
-    <app-article-footer
-      [buttonLink]="overviewUrl"
-      [buttonLabel]="'Back to Diaryentries'"
-      [showDelete]="canDelete"
-      [deleteMessage]="'Delete this Diaryentry?'"
-      (delete)="diaryentryDelete.emit(diaryentry)"
-    ></app-article-footer>
-    
-</article>
+    </ng-container>
+  
+      <!-- Heading -->
+      <div class="row">
+          <h1 class="col-12 diaryentry__heading">
+              Diary Entry # {{ diaryentry.session_details?.session_number }} <br>
+              {{ diaryentry.title }}
+          </h1>
+          <h6 class="col-12 diaryentry__subheading"> 
+            Written by: {{ diaryentry.author_details?.name }} <br>
+            on {{diaryentry.session_details?.session_date | date: "longDate"}}
+          </h6>
+      </div>
+  
+      <!-- Next/Prior Diaryentry Buttons -->
+      <ng-container *ngTemplateOutlet="navButtons"></ng-container>
+  
+      <!-- DiaryEntry Text In Encounters -->
+      <app-diaryentry-encounters
+        [diaryEntryPk]="diaryentry.pk ?? -1"
+        [encounters]="diaryentry.encounters"
+        [campaignCharacters]="campaignCharacters"
+        [encounterServerModel]="encounterServerModel"
+        [canUpdate]="canUpdate"
+        [canDelete]="canDelete"
+        [canCreate]="canCreate"
+        [state]="state === 'DISPLAY' ? 'READ' : 'EDIT'"
+        (connectionDelete)="encounterConnectionDelete.emit($event)"
+        (connectionCreate)="encounterConnectionCreate.emit($event)"
+        (encounterDelete)="encounterDelete.emit($event)"
+        (encounterUpdate)="encounterUpdate.emit($event)"
+        (encounterCreate)="encounterCreate.emit($event)"
+        (encounterSwap)="encounterSwap.emit($event)"
+        (encounterCutInsert)="encounterCutInsert.emit($event)"
+      ></app-diaryentry-encounters>
+  
+      <!-- Next/Prior Diaryentry Buttons -->
+      <ng-container *ngTemplateOutlet="navButtons"></ng-container>
+  
+      <!-- Footer (Move to other Article + Delete Article) -->
+      <app-article-footer
+        [buttonLink]="overviewUrl"
+        [buttonLabel]="'Back to Diaryentries'"
+        [showDelete]="canDelete"
+        [deleteMessage]="'Delete this Diaryentry?'"
+        (delete)="diaryentryDelete.emit(diaryentry)"
+      ></app-article-footer>
+      
+  </article>  
+</app-page-container>
 
 <ng-template #navButtons>
   <!-- Next/Prior Diaryentry Buttons -->
