--- a/src/app/design/templates/location-template/location-template.component.html
+++ b/src/app/design/templates/location-template/location-template.component.html
@@ -1,4 +1,4 @@
-<div class="main" #article>
+<app-page-container>
   <article class="container">
     <ng-container *ngIf="canUpdate">
       <div class="location__edit-container">
@@ -10,13 +10,13 @@
         </a>
       </div>
     </ng-container>
-
+  
     <!-- Heading -->
     <div class="row">
       <h1 class="col-12 location__heading"> 
         {{ location.name }} 
       </h1>
-
+  
       <!-- String indicating all parent_locations -->
       <ng-container *ngIf="location.parent_location_list?.length ?? 0 > 0">
         <h5 class="col-12 location__subheading subheading">
@@ -32,9 +32,9 @@
           {{ location.name }}
         </h5>
       </ng-container>
-
+  
     </div>
-
+  
   <!-- Image Gallery -->
   <div class="location__images">
     <!-- Image Gallery -->
@@ -50,7 +50,7 @@
       (updateImage)="updateImage.emit($event)"
     ></app-image-carousel-card>
   </div>
-
+  
     <div class="mb-3">
       <app-badge-list
         [entries]="markerEntries"
@@ -60,7 +60,7 @@
         [createOptions]="markerCreateUrl"
       ></app-badge-list>
     </div>
-
+  
     <!-- Description -->
     <div class="location__description">
       <h4> Description </h4>
@@ -68,7 +68,7 @@
         [text]="location.description"
       ></app-html-text>
     </div>
-
+  
     <!-- Characters of Interest -->
     <div class="location__characters">
       <app-list
@@ -79,8 +79,8 @@
         (create)="routeToCharacterCreation()"
       ></app-list>
     </div>
-
-
+  
+  
     <!-- Locations of Interest -->
     <div class="encounter-list mb-5 mt-3">
       <app-location-accordion 
@@ -88,7 +88,7 @@
         [canCreate]="canCreate"
       ></app-location-accordion>
     </div>
-
+  
     <!-- Footer (Move to other Article + Delete Article) -->
     <app-article-footer
       [buttonLink]="overviewUrl"
@@ -99,4 +99,4 @@
     ></app-article-footer>
     
   </article>
-</div>
+</app-page-container>
