--- a/src/app/design/templates/map/map.component.html
+++ b/src/app/design/templates/map/map.component.html
@@ -1,57 +1,59 @@
-<article class="container map">
-    <ng-container *ngIf="canUpdate">
-      <div class="map__edit-container">
-        <a [routerLink]="updateUrl">
-          <app-button
-            [icon]="'pencil'"
-            [type]="'SECONDARY'"
-          ></app-button>
-        </a>
-      </div>
-    </ng-container>
-    
-    <ng-container *ngIf="mapChoices.length > 0">
-      <h3 class="map__heading heading">
-        Map of
-        <app-choice-select
-          class="heading__select"
-          [choices]="mapChoices"
-          [labelProp]="'name'"
-          [selectedLabelValue]="map.name"
-          (choiceSelect)="onMapChange($event)"
-        ></app-choice-select>
-      </h3>
-    </ng-container>
-    
-    <a [routerLink]="createUrl" class="map__create">
-      <app-button
-        [type]="'PRIMARY'"
-        [icon]="'plus'"
-        [text]="'Add Map'"
-      ></app-button>
-    </a>
-
-    <!-- Leaflet Map -->
-    <ng-container *ngIf="mapChoices.length > 0; else noMapMessage">
-      <div class="row map__map">
-        <div class="mb-5 col" *ngIf="map; else loading">
-          <app-ngx-leaflet-map
-            [mapData]="map"
-            [serverUrl]="serverUrl"
-          ></app-ngx-leaflet-map>
+<app-page-container>
+  <article class="container map">
+      <ng-container *ngIf="canUpdate">
+        <div class="map__edit-container">
+          <a [routerLink]="updateUrl">
+            <app-button
+              [icon]="'pencil'"
+              [type]="'SECONDARY'"
+            ></app-button>
+          </a>
         </div>
-      </div>
-    </ng-container>
-
-    <!-- Footer (Move to other Article + Delete Article) -->
-    <app-article-footer
-      [showDelete]="canDelete"
-      [buttonLink]="homeUrl"
-      [buttonLabel]="'Back to Frontpage'"
-      [deleteMessage]="'Delete Map of ' + map.name + '?'"
-      (delete)="onMapDelete()"
-    ></app-article-footer>
-</article>
+      </ng-container>
+      
+      <ng-container *ngIf="mapChoices.length > 0">
+        <h3 class="map__heading heading">
+          Map of
+          <app-choice-select
+            class="heading__select"
+            [choices]="mapChoices"
+            [labelProp]="'name'"
+            [selectedLabelValue]="map.name"
+            (choiceSelect)="onMapChange($event)"
+          ></app-choice-select>
+        </h3>
+      </ng-container>
+      
+      <a [routerLink]="createUrl" class="map__create">
+        <app-button
+          [type]="'PRIMARY'"
+          [icon]="'plus'"
+          [text]="'Add Map'"
+        ></app-button>
+      </a>
+  
+      <!-- Leaflet Map -->
+      <ng-container *ngIf="mapChoices.length > 0; else noMapMessage">
+        <div class="row map__map">
+          <div class="mb-5 col" *ngIf="map; else loading">
+            <app-ngx-leaflet-map
+              [mapData]="map"
+              [serverUrl]="serverUrl"
+            ></app-ngx-leaflet-map>
+          </div>
+        </div>
+      </ng-container>
+  
+      <!-- Footer (Move to other Article + Delete Article) -->
+      <app-article-footer
+        [showDelete]="canDelete"
+        [buttonLink]="homeUrl"
+        [buttonLabel]="'Back to Frontpage'"
+        [deleteMessage]="'Delete Map of ' + map.name + '?'"
+        (delete)="onMapDelete()"
+      ></app-article-footer>
+  </article>
+</app-page-container>
 
 <ng-template #noMapMessage>
   <ng-container *ngIf="canCreate; else noMapMessageGuest">
