--- a/src/app/design/templates/quest-overview/quest-overview.component.html
+++ b/src/app/design/templates/quest-overview/quest-overview.component.html
@@ -1,37 +1,39 @@
-<article class="container quests">
-    <!-- Heading -->
-    <h1 class="quests__heading">Quests</h1>
-    
-
-    <div class="row mb-3 quests__create">
-      <a [routerLink]="createUrl">
+<app-page-container>
+  <article class="container quests">
+      <!-- Heading -->
+      <h1 class="quests__heading">Quests</h1>
+      
+  
+      <div class="row mb-3 quests__create">
+        <a [routerLink]="createUrl">
+          <app-button
+            [type]="'PRIMARY'"
+            [icon]="'plus'"
+            [text]="'Add quest'"
+          ></app-button>
+        </a>
+      </div>
+      
+      <div class="quests__tables">
+        <ng-container *ngFor="let questGroup of groupedQuests">
+          <div class="quests__table">
+            <app-quest-table
+              [questTaker]="questGroup.key"
+              [quests]="questGroup.value"
+            ></app-quest-table>
+          </div>
+        </ng-container>
+      </div>
+  
+  
+    <!-- Footer -->
+    <div class="row">
+      <a [routerLink]="homeUrl" class="quests__home">
         <app-button
-          [type]="'PRIMARY'"
-          [icon]="'plus'"
-          [text]="'Add quest'"
+          [type]="'SECONDARY'"
+          [text]="'Back To Frontpage'"
         ></app-button>
       </a>
     </div>
-    
-    <div class="quests__tables">
-      <ng-container *ngFor="let questGroup of groupedQuests">
-        <div class="quests__table">
-          <app-quest-table
-            [questTaker]="questGroup.key"
-            [quests]="questGroup.value"
-          ></app-quest-table>
-        </div>
-      </ng-container>
-    </div>
-
-
-  <!-- Footer -->
-  <div class="row">
-    <a [routerLink]="homeUrl" class="quests__home">
-      <app-button
-        [type]="'SECONDARY'"
-        [text]="'Back To Frontpage'"
-      ></app-button>
-    </a>
-  </div>
-</article>
+  </article>
+</app-page-container>
