--- a/src/app/design/templates/rules-template/rules-template.component.html
+++ b/src/app/design/templates/rules-template/rules-template.component.html
@@ -1,23 +1,27 @@
-<h1 class="heading"> 
-  Rules
-</h1>
-
-<app-rules
-  [rules]="rules"
-  [serverModel]="serverModel"
-  [canCreate]="canCreate"
-  [canUpdate]="canUpdate"
-  [canDelete]="canDelete"
-  (ruleDelete)="ruleDelete.emit($event)"
-  (ruleCreate)="ruleCreate.emit($event)"
-  (ruleUpdate)="ruleUpdate.emit($event)"
-></app-rules>
-
-<div class="container">
-  <a class="row back-link" [routerLink]="homeUrl">
-    <app-button
-      [type]="'SECONDARY'"
-      [text]="'Back to Frontpage'"
-    ></app-button>
-  </a>
-</div>
+<app-page-container>
+  <article>
+    <h1 class="heading"> 
+      Rules
+    </h1>
+    
+    <app-rules
+      [rules]="rules"
+      [serverModel]="serverModel"
+      [canCreate]="canCreate"
+      [canUpdate]="canUpdate"
+      [canDelete]="canDelete"
+      (ruleDelete)="ruleDelete.emit($event)"
+      (ruleCreate)="ruleCreate.emit($event)"
+      (ruleUpdate)="ruleUpdate.emit($event)"
+    ></app-rules>
+    
+    <div class="container">
+      <a class="row back-link" [routerLink]="homeUrl">
+        <app-button
+          [type]="'SECONDARY'"
+          [text]="'Back to Frontpage'"
+        ></app-button>
+      </a>
+    </div>
+  </article>
+</app-page-container>
