--- a/src/app/design/organisms/image-grid/image-grid.component.html
+++ b/src/app/design/organisms/image-grid/image-grid.component.html
@@ -9,7 +9,7 @@
               (click)="entryClick.emit(entry)"
               [ngClass]="{
                 'col-lg-12': columnCount === 1,
-                'col-lg-6': columnCount === 2,
+                'col-sm-6': columnCount === 2,
                 'col-md-6 col-lg-4': columnCount === 3,
               }"
             >
