--- a/src/global_class_modifications.scss
+++ b/src/global_class_modifications.scss
@@ -26,3 +26,8 @@ a {
   font-weight: bold;
   text-decoration-style: dashed;
 }
+
+//Animations
+.animate__animated{
+	--animate-duration: 0.35s;
+}
