--- a/src/app/design/organisms/page/page.component.html
+++ b/src/app/design/organisms/page/page.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="campaign">
   <app-sidebar
     #sidebar
-    class="sidebar"
+    class="sidebar sidebar--mobile-visible"
     [campaign]="campaign"
   ></app-sidebar>
 </ng-container>
