--- a/src/app/design/organisms/icon-card-list/icon-card-list.component.html
+++ b/src/app/design/organisms/icon-card-list/icon-card-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <ng-container *ngFor="let article of articles">
-      <div class="entry col-6 col-md-4 col-lg-3">
+      <div class="entry col-6 col-lg-4 col-xl-3">
         <a
           class="entry__link"
           [routerLink]="article.link" 
