Remove unnecessary console.log

--- a/src/app/app/home-page/home-page.component.html
+++ b/src/app/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <app-home
   [serverUrl]="serverUrl"
   [campaignData]="(campaignData$ | async) ?? undefined"
-  [articles]="(recentlyUpdatedArticles$ | async) ?? []"
+  [newArticles]="(recentlyUpdatedArticles$ | async) ?? []"
   (search)="search($event)"
   (loadArticlePage)="loadArticlePage($event)"
 ></app-home>
