Push scrolling to innerContentElemetn

--- a/src/app/design/organisms/page/page.component.html
+++ b/src/app/design/organisms/page/page.component.html
@@ -8,12 +8,15 @@
 
 <div 
   class="page" 
-  (scroll)="onPageScroll($event)"
   [class.page--shift-right]="showSidebar" 
   #content
 >
   
-  <div class="page__content">  
+  <div 
+    class="page__content" 
+    (scroll)="onPageScroll($event)"
+    #innerContent
+  >  
     <router-outlet #routerOutlet></router-outlet>
   </div>
   
