Fix recently updated article stuff and get it up and running

--- a/src/app/app/home-page/home-page.component.html
+++ b/src/app/app/home-page/home-page.component.html
@@ -2,6 +2,7 @@
   [serverUrl]="serverUrl"
   [campaignData]="(campaignData$ | async) ?? undefined"
   [newArticles]="(recentlyUpdatedArticles$ | async) ?? []"
+  [canLoadMore]="!!(hasMoreArticles$ | async)"
   (search)="search($event)"
   (loadArticlePage)="loadArticlePage($event)"
 ></app-home>
