Add logout action plumbing to sidebar logout

--- a/src/app/app/campaign-overview-page/campaign-overview-page.component.html
+++ b/src/app/app/campaign-overview-page/campaign-overview-page.component.html
@@ -3,4 +3,5 @@
   [userName]="userName"
   [campaigns]="(campaigns$ | async)!"
   [isGlobalAdmin]="isGlobalAdmin"
+  (logout)="logout()"
 ></app-campaign-overview>
