Add logout action plumbing to sidebar logout

--- a/src/app/design/organisms/page/page.component.html
+++ b/src/app/design/organisms/page/page.component.html
@@ -3,6 +3,7 @@
     #sidebar
     class="sidebar sidebar--mobile-visible"
     [campaign]="campaign"
+    (logout)="logout.emit()"
   ></app-sidebar>
 </ng-container>
 
