Add profile page to module

--- a/src/app/design/templates/profile/profile.component.html
+++ b/src/app/design/templates/profile/profile.component.html
@@ -73,7 +73,7 @@
           <a [routerLink]="backUrl" class="w-100">
             <app-button
               [type]="'SECONDARY'"
-              [text]="campaignName ? 'Back To ' + campaignName : 'Campaigns'"
+              [text]="campaignName ? 'Back To ' + campaignName : 'Back to Campaigns'"
             ></app-button>
           </a>
         </div>
